---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI001 Name of private `TypeVar` must start with `_`
 --> PYI001.pyi:3:5
  |
3 | T = TypeVar("T")  # Error: TypeVars in stubs must start with _
  |     ^^^^^^^^^^^^
  |

PYI001 Name of private `TypeVarTuple` must start with `_`
 --> PYI001.pyi:5:10
  |
5 | TTuple = TypeVarTuple("TTuple")  # Error: TypeVarTuples must also start with _
  |          ^^^^^^^^^^^^^^^^^^^^^^
  |

PYI001 Name of private `ParamSpec` must start with `_`
 --> PYI001.pyi:7:5
  |
7 | P = ParamSpec("P")  # Error: ParamSpecs must start with _
  |     ^^^^^^^^^^^^^^
  |
